# MCP-Client-Server-EMAIL

./: .env  README.md  pyproject.toml  server.py
